# fastapi_users

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py
src/: routes.py
src/config/: logger.py  project_config.py
src/config/database/: __init__.py  accessor.py  database.py
src/models/: user_model.py
src/users/controllers/: auth_controller.py  users_controller.py
src/users/dependencies/: auth_dependency.py  users_dependency.py
src/users/exceptions/: users_exceptions.py
src/users/repositories/: users_repository.py
src/users/schemas/: auth_schema.py  users_schema.py
src/users/services/: auth_service.py  users_service.py
